--- a/sysutils/xfce4-power-manager/Makefile
+++ b/sysutils/xfce4-power-manager/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.35 2024/12/27 08:20:42 wiz Exp $
+# $NetBSD: Makefile,v 1.36 2025/01/05 13:50:37 bsiegert Exp $
 
-PKGREVISION= 3
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	xfce4-power-manager-4.18.4
+DISTNAME=	xfce4-power-manager-4.20.0
 CATEGORIES=	sysutils
 MASTER_SITES=	https://archive.xfce.org/src/xfce/xfce4-power-manager/${PKGVERSION_NOREV:R}/
 
@@ -15,8 +14,8 @@ CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFBASE}
 CONF_FILES=	share/examples/xfce4/autostart/xfce4-power-manager.desktop \
 		${PKG_SYSCONFDIR}/xdg/autostart/xfce4-power-manager.desktop
 
+.include "../../devel/gettext-tools/msgfmt-desktop.mk"
 .include "../../x11/libXmu/buildlink3.mk"
-BUILDLINK_API_DEPENDS.libxfce4ui+=	libxfce4ui>=4.18.2
 .include "../../x11/libxfce4ui/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../sysutils/upower/buildlink3.mk"
