--- a/geography/osm2pgsql/Makefile
+++ b/geography/osm2pgsql/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.54 2024/12/29 15:09:49 adam Exp $
+# $NetBSD: Makefile,v 1.55 2025/01/05 14:14:13 gdt Exp $
 
 DISTNAME=	osm2pgsql-1.3.0
-PKGREVISION=	23
+PKGREVISION=	24
 CATEGORIES=	geography
 MASTER_SITES=	${MASTER_SITE_GITHUB:=openstreetmap/}
 GITHUB_TAG=	${PKGVERSION_NOREV}
@@ -11,16 +11,12 @@ HOMEPAGE=	https://github.com/openstreetmap/osm2pgsql/
 COMMENT=	OpenStreetMap data to PostgreSQL converter
 LICENSE=	gnu-gpl-v2
 
-WRKSRC=		${WRKDIR}/osm2pgsql-${PKGVERSION_NOREV}
-USE_CMAKE=	yes
 USE_LANGUAGES=	c c++
 
-# osm2pgsql does not allow srcdir builds (and separate is better anyway)
-post-extract:
-	${RUN} mkdir -p ${WRKSRC}/build
-CONFIGURE_DIRS=	build
-CMAKE_ARG_PATH=	${WRKSRC}
+.include "../../devel/cmake/build.mk"
 
+# Test dependencies.
+USE_TOOLS+=	python
 CMAKE_CONFIGURE_ARGS+=	-DBUILD_TESTS=ON
 TEST_TARGET=	test
 
@@ -29,6 +25,9 @@ TEST_TARGET=	test
 .include "../../devel/boost-libs/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../lang/lua/buildlink3.mk"
+# Per README, not needed, as python is for running tests, but
+# without it cmake finds 2.7 and errors out.
+.include "../../lang/python/application.mk"
 .include "../../mk/pgsql.buildlink3.mk"
 .include "../../textproc/expat/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
