--- a/www/unit-perl/Makefile
+++ b/www/unit-perl/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2024/11/16 12:08:06 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/05 18:24:34 osa Exp $
 
 PKGNAME=	unit-${LANG}-${UNIT_VERSION}
-PKGREVISION=	1
 COMMENT=	Perl module for NGINX Unit
 
 LANG=		perl
