--- a/math/octave/Makefile
+++ b/math/octave/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.261 2024/11/14 22:20:42 wiz Exp $
+# $NetBSD: Makefile,v 1.262 2025/01/05 20:47:57 adam Exp $
 
-DISTNAME=	octave-9.2.0
-PKGREVISION=	4
+DISTNAME=	octave-9.3.0
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_GNU:=octave/}
 EXTRACT_SUFX=	.tar.xz
