--- a/devel/py-gitdb/Makefile
+++ b/devel/py-gitdb/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2023/10/29 17:14:15 adam Exp $
+# $NetBSD: Makefile,v 1.9 2025/01/06 08:28:46 adam Exp $
 
-DISTNAME=	gitdb-4.0.11
+DISTNAME=	gitdb-4.0.12
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=g/gitdb/}
@@ -10,11 +10,10 @@ HOMEPAGE=	https://github.com/gitpython-developers/gitdb
 COMMENT=	Git Object Database
 LICENSE=	modified-bsd
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-smmap>=3.0.1:../../devel/py-smmap
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
