--- a/textproc/py-deepdiff/Makefile
+++ b/textproc/py-deepdiff/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.18 2024/11/11 07:29:01 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2025/01/06 10:30:17 adam Exp $
 
-DISTNAME=	deepdiff-7.0.1
+DISTNAME=	deepdiff-8.1.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/deepdiff/}
@@ -11,10 +11,10 @@ COMMENT=	Deep Difference and Search of any Python object/data
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-ordered-set>=4.1.0:../../devel/py-ordered-set
+DEPENDS+=	${PYPKGPREFIX}-orderly-set>=5.2.3:../../devel/py-orderly-set
 # cli
 DEPENDS+=	${PYPKGPREFIX}-click>=8.1.7:../../devel/py-click
-DEPENDS+=	${PYPKGPREFIX}-yaml>=6.0.1:../../textproc/py-yaml
+DEPENDS+=	${PYPKGPREFIX}-yaml>=6.0.2:../../textproc/py-yaml
 TEST_DEPENDS+=	${PYPKGPREFIX}-numpy>=1.23.5:../../math/py-numpy
 
 USE_LANGUAGES=	# none
