--- a/geography/qgis/Makefile
+++ b/geography/qgis/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.232 2024/12/26 23:57:20 adam Exp $
+# $NetBSD: Makefile,v 1.233 2025/01/06 18:16:24 gdt Exp $
 
 # This is intentionally 3.34 Long Term Release.  Please do not update
 # to later branches, and instead discuss whether/how we want multiple
 # versions, or to only track one LTR branch.
-DISTNAME=	qgis-3.34.13
-PKGREVISION=	1
+DISTNAME=	qgis-3.34.14
 CATEGORIES=	geography
 MASTER_SITES=	https://qgis.org/downloads/
 EXTRACT_SUFX=	.tar.bz2
