--- a/x11/xfce4-settings/patches/patch-xfsettingsd_Makefile.in
+++ b/x11/xfce4-settings/patches/patch-xfsettingsd_Makefile.in
@@ -1,13 +1,13 @@
-$NetBSD: patch-xfsettingsd_Makefile.in,v 1.3 2018/06/23 22:08:54 youri Exp $
+$NetBSD: patch-xfsettingsd_Makefile.in,v 1.4 2025/01/06 18:42:51 bsiegert Exp $
 
 Adjust install paths.
 
---- xfsettingsd/Makefile.in.orig	2018-06-23 20:33:39.000000000 +0000
+--- xfsettingsd/Makefile.in.orig	2024-12-15 09:30:17.000000000 +0000
 +++ xfsettingsd/Makefile.in
-@@ -547,9 +547,9 @@ xfsettingsd_LDADD = $(GTK_LIBS) $(GLIB_L
- 	$(LIBXKLAVIER_LIBS) $(XI_LIBS) $(LIBX11_LIBS) \
- 	$(LIBNOTIFY_LIBS) $(FONTCONFIG_LIBS) $(LIBINPUT_LIBS) -lm \
- 	$(am__append_3) $(am__append_6)
+@@ -693,9 +693,9 @@ libxfsettingsd_gtk_settings_sync_la_LIBA
+ 	$(GTK_LIBS) \
+ 	$(XFCONF_LIBS)
+ 
 -settingsdir = $(sysconfdir)/xdg/xfce4/xfconf/xfce-perchannel-xml
 +settingsdir = $(datadir)/examples/xfce4/xfconf/xfce-perchannel-xml
  settings_DATA = xsettings.xml
@@ -15,4 +15,4 @@ Adjust install paths.
 +autostartdir = $(datadir)/examples/xfce4/autostart
  autostart_in_files = xfsettingsd.desktop.in
  autostart_DATA = $(autostart_in_files:.desktop.in=.desktop)
- EXTRA_DIST = \
+ BUILT_SOURCES = \
