--- a/emulators/picodrive/Makefile
+++ b/emulators/picodrive/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2025/01/06 21:49:07 ktnb Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/07 02:46:56 gutteridge Exp $
 
 DISTNAME=	PicoDrive_1.93
 PKGNAME=	${DISTNAME:tl:S/_/-/1}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_GITHUB:=notaz/}
 GITHUB_RELEASE=	v${PKGVERSION_NOREV}
@@ -59,6 +59,7 @@ do-install:
 		${DESTDIR}${PREFIX}/share/picodrive/skin
 
 .include "../../devel/SDL/buildlink3.mk"
+.include "../../devel/zlib/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../mk/dlopen.buildlink3.mk"
