--- a/devel/py-dash/Makefile
+++ b/devel/py-dash/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2024/11/11 07:28:06 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/01/07 11:37:44 adam Exp $
 
-DISTNAME=	pydash-8.0.3
+DISTNAME=	pydash-8.0.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^py//}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pydash/}
@@ -14,6 +14,7 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61.0.:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-typing-extensions>=4.6.1:../../devel/py-typing-extensions
 TEST_DEPENDS+=	${PYPKGPREFIX}-invoke-[0-9]*:../../sysutils/py-invoke
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-mypy-testing-[0-9]*:../../devel/py-test-mypy-testing
 
 USE_LANGUAGES=	# none
 
