--- a/devel/py-zope.configuration/Makefile
+++ b/devel/py-zope.configuration/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2024/11/11 07:28:31 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/07 11:45:19 adam Exp $
 
-DISTNAME=	zope.configuration-5.0.1
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+DISTNAME=	zope_configuration-6.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/./}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=z/zope.configuration/}
 
@@ -9,6 +9,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/zopefoundation/zope.configuration
 COMMENT=	Zope Configuration Markup Language
 LICENSE=	zpl-2.1
+
+WHEEL_NAME=	${DISTNAME:S/_/./}
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-zope.i18nmessageid-[0-9]*:../../devel/py-zope.i18nmessageid
@@ -18,8 +20,6 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-zope.testing-[0-9]*:../../devel/py-zope.testing
 TEST_DEPENDS+=	${PYPKGPREFIX}-zope.testrunner-[0-9]*:../../devel/py-zope.testrunner
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
