--- a/sysutils/py-xattr/Makefile
+++ b/sysutils/py-xattr/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.27 2024/11/11 07:29:00 wiz Exp $
+# $NetBSD: Makefile,v 1.28 2025/01/07 11:46:18 adam Exp $
 
-DISTNAME=	xattr-1.1.0
+DISTNAME=	xattr-1.1.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	sysutils python
 MASTER_SITES=	${MASTER_SITE_PYPI:=x/xattr/}
@@ -12,8 +12,6 @@ LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=68:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-cffi>=1.16.0:../../devel/py-cffi
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
