--- a/devel/py-ruff/Makefile
+++ b/devel/py-ruff/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.50 2024/12/27 09:08:38 wiz Exp $
+# $NetBSD: Makefile,v 1.51 2025/01/07 11:55:11 adam Exp $
 
-DISTNAME=	ruff-0.8.4
+DISTNAME=	ruff-0.8.6
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=r/ruff/}
@@ -17,7 +17,7 @@ USE_TOOLS+=	gmake
 
 # Depends on an unpublished crate. Can't use cargo.mk to fetch it.
 LSP_TYPES_REV=	3512a9f33eadc5402cfab1b8f7340824c8ca1439
-SALSA_REV=	3c7f1694c9efba751dbeeacfbc93b227586e316a
+SALSA_REV=	88a1d7774d78f048fbd77d40abca9ebd729fd1f0
 DISTFILES=	${DEFAULT_DISTFILES}
 DISTFILES+=	lsp-types-${LSP_TYPES_REV}.tar.gz
 DISTFILES+=	salsa-${SALSA_REV}.tar.gz
